started on general stats section

--- a/app/dash/assets/style.css
+++ b/app/dash/assets/style.css
@@ -9,3 +9,17 @@
 .dash-error-menu {
     color: black;
 }
+
+.navbar {
+    margin-bottom: 15px;
+}
+
+#general-stats h1 {
+    font-size: 1.3rem;
+    font-weight: bold;
+}
+
+#general-stats h1 {
+    font-size: 1.3rem;
+    font-weight: bold;
+}
