--- a/app/dash/assets/style.scss
+++ b/app/dash/assets/style.scss
@@ -13,7 +13,15 @@
     margin-bottom: 15px;
 }
 
-#general-stats h1 {
-    font-size: 1.3rem;
-    font-weight: bold;
+#general-stats {
+    h1 {
+        font-size: 1.2rem;
+        margin-bottom: 0px;
+        color: rgb(170, 170, 170)
+    }
+
+    span {
+        font-size: 1.4rem;
+        font-weight: bold;
+    }
 }
