--- a/app/dash/assets/style.scss
+++ b/app/dash/assets/style.scss
@@ -13,6 +13,12 @@
     margin-bottom: 15px;
 }
 
+[class^="col"] {
+    @media (max-width: 992px) {
+        margin-bottom: 15px;
+    }
+}
+
 #general-stats {
     h1 {
         font-size: 1.2rem;
