--- a/app/dash/assets/style.scss
+++ b/app/dash/assets/style.scss
@@ -13,8 +13,8 @@
     margin-bottom: 15px;
 }
 
-[class^="col"] {
-    @media (max-width: 992px) {
+.container {
+    [class^="col"] {
         margin-bottom: 15px;
     }
 }
