--- a/app/dash/assets/style.scss
+++ b/app/dash/assets/style.scss
@@ -1,3 +1,16 @@
+// Main bootstrap imports
+@import "./bootstrap/scss/functions";
+@import "./bootstrap/scss/mixins";
+@import "./bootstrap/darkly/variables";
+
+// Own variable overrides
+
+// optional Bootstrap components as you like
+@import "./bootstrap/scss/bootstrap";
+
+// Apply theme
+@import "./bootstrap/darkly/bootswatch";
+
 // Variables
 $col-height: 253px;
 
