updated navbar date selector

--- a/app/dash/assets/style.scss
+++ b/app/dash/assets/style.scss
@@ -15,6 +15,14 @@
     .DateRangePicker_picker {
         left: -350px !important;
     }
+
+    #date-select {
+        width: 15rem;
+    }
+
+    #date-range-select {
+        width: 6rem;
+    }
 }
 
 // General layout CSS
