added playtime toggle to navbar

--- a/app/dash/assets/style.scss
+++ b/app/dash/assets/style.scss
@@ -12,8 +12,8 @@
 .navbar {
     margin-bottom: bootstrap.$grid-gutter-width;
 
-    .DateRangePicker_picker {
-        left: -350px !important;
+    .right {
+        margin-left: 15px
     }
 
     #date-select {
