--- a/app/dash/assets/style.scss
+++ b/app/dash/assets/style.scss
@@ -48,9 +48,14 @@
         color: rgb(170, 170, 170);
     }
 
-    span {
+    .main-stat {
         font-size: 1.5rem;
         font-weight: bold;
+        text-align: center;
+    }
+
+    .main-stat-old {
+        font-size: 1rem;
         text-align: center;
     }
 
