less padding on cards

--- a/app/dash/assets/style.scss
+++ b/app/dash/assets/style.scss
@@ -39,6 +39,10 @@
     &.halve {
         @include col-height-halve;
     }
+
+    .card-body {
+        padding: 5px;
+    }
 }
 
 .general-stats {
