--- a/app/dash/assets/_mixins.scss
+++ b/app/dash/assets/_mixins.scss
@@ -45,3 +45,25 @@
         height: $col-height-xl / 2;
     }
 }
+
+@mixin col-height-quarter() {
+    @include bootstrap.media-breakpoint-up(xs) {
+        height: $col-height-xs / 4;
+    }
+
+    @include bootstrap.media-breakpoint-up(sm) {
+        height: $col-height-sm / 4;
+    }
+
+    @include bootstrap.media-breakpoint-up(md) {
+        height: $col-height-md / 4;
+    }
+
+    @include bootstrap.media-breakpoint-up(lg) {
+        height: $col-height-lg / 4;
+    }
+
+    @include bootstrap.media-breakpoint-up(xl) {
+        height: $col-height-xl / 4;
+    }
+}
