custom graph colors

--- a/app/dash/assets/_bootstrap.scss
+++ b/app/dash/assets/_bootstrap.scss
@@ -4,6 +4,8 @@
 @import "./bootstrap/darkly/variables";
 
 // Own variable overrides
+$primary: #108DE4;
+$secondary: #0795ED;
 
 // optional Bootstrap components as you like
 @import "./bootstrap/scss/bootstrap";
