--- a/app/dash/assets/_mixins.scss
+++ b/app/dash/assets/_mixins.scss
@@ -24,6 +24,28 @@
     }
 }
 
+@mixin col-height-4() {
+    @include bootstrap.media-breakpoint-up(xs) {
+        height: $col-height-4-xs;
+    }
+
+    @include bootstrap.media-breakpoint-up(sm) {
+        height: $col-height-4-sm;
+    }
+
+    @include bootstrap.media-breakpoint-up(md) {
+        height: $col-height-4-md;
+    }
+
+    @include bootstrap.media-breakpoint-up(lg) {
+        height: $col-height-4-lg;
+    }
+
+    @include bootstrap.media-breakpoint-up(xl) {
+        height: $col-height-4-xl;
+    }
+}
+
 @mixin col-height-halve() {
     @include bootstrap.media-breakpoint-up(xs) {
         height: $col-height-xs / 2;
