--- a/app/dash/assets/style.scss
+++ b/app/dash/assets/style.scss
@@ -104,6 +104,15 @@
 }
 
 .top-image {
+    @include bootstrap.media-breakpoint-up(xs) {
+        height: auto;
+    }
+
+    @include bootstrap.media-breakpoint-up(lg) {
+        @include col-height(3)
+    }
+
+
     .title {
         position: absolute;
         padding: 5px 10px;
@@ -134,9 +143,11 @@
     }
 
     img {
-        padding-bottom: 2px;
         object-fit: cover;
 
-        @include col-height(3);
+        @include bootstrap.media-breakpoint-up(lg) {
+            padding-bottom: 2px;
+            @include col-height(3)
+        }
     }
 }
