--- a/app/dash/assets/style.scss
+++ b/app/dash/assets/style.scss
@@ -131,6 +131,20 @@
     }
 }
 
+.vocal-chart {
+    @include bootstrap.media-breakpoint-up(xs) {
+        @include col-height(3)
+    }
+
+    @include bootstrap.media-breakpoint-up(md) {
+        @include col-height(2)
+    }
+
+    @include bootstrap.media-breakpoint-up(lg) {
+        @include col-height(1.5)
+    }
+}
+
 .top-image {
     @include bootstrap.media-breakpoint-up(xs) {
         height: auto;
