--- a/app/dash/assets/style.scss
+++ b/app/dash/assets/style.scss
@@ -207,3 +207,17 @@
         @include col-height(4)
     }
 }
+
+.tag-timeline {
+    @include bootstrap.media-breakpoint-up(xs) {
+        @include col-height(6)
+    }
+
+    @include bootstrap.media-breakpoint-up(sm) {
+        @include col-height(12)
+    }
+
+    @include bootstrap.media-breakpoint-up(lg) {
+        @include col-height(4)
+    }
+}
