--- a/app/assets/style.scss
+++ b/app/assets/style.scss
@@ -213,8 +213,8 @@
         @include col-height(6)
     }
 
-    @include bootstrap.media-breakpoint-up(sm) {
-        @include col-height(12)
+    @include bootstrap.media-breakpoint-up(md) {
+        @include col-height(6)
     }
 
     @include bootstrap.media-breakpoint-up(lg) {
